--- a/arm9/arm9.vcxproj
+++ b/arm9/arm9.vcxproj
@@ -173,10 +173,18 @@
     <ClCompile Include="source\gui\FileBrowserListAdapter.vram.cpp" />
     <ClCompile Include="source\gui\FileBrowserListEntry.vram.cpp" />
     <ClCompile Include="source\gui\core\ListRecycler.vram.cpp" />
+    <ClCompile Include="source\gui\SettingsCategoryListAdapter.vram.cpp" />
+    <ClCompile Include="source\gui\SettingsCategoryListEntry.vram.cpp" />
+    <ClCompile Include="source\gui\SettingsItemListAdapter.vram.cpp" />
+    <ClCompile Include="source\gui\SettingsItemListEntry.vram.cpp" />
+    <ClCompile Include="source\gui\SettingsScreen.vram.cpp" />
     <ClCompile Include="source\gui\Toolbar.vram.cpp" />
     <ClCompile Include="source\gui\core\UIManager.vram.cpp" />
+    <ClCompile Include="source\gui\UIContext.vram.cpp" />
     <ClCompile Include="source\gui\uiutil.vram.cpp" />
+    <ClCompile Include="source\INIReader.vram.cpp" />
     <ClCompile Include="source\init.cpp" />
+    <ClCompile Include="source\INIWriter.vram.cpp" />
     <ClCompile Include="source\math.vram.c" />
     <ClCompile Include="source\qsort.vram.cpp" />
     <ClCompile Include="source\save\EepromSave.vram.cpp" />
@@ -184,6 +192,7 @@
     <ClCompile Include="source\save\Save.vram.cpp" />
     <ClCompile Include="source\save\SramSave.vram.cpp" />
     <ClCompile Include="source\sd_access.cpp" />
+    <ClCompile Include="source\settings.vram.cpp" />
     <ClCompile Include="source\string.vram.cpp" />
     <ClCompile Include="source\vector.vram.cpp" />
     <ClCompile Include="source\vramheap.vram.cpp" />
@@ -217,11 +226,19 @@
     <ClInclude Include="source\gui\core\NtftFont.h" />
     <ClInclude Include="source\gui\core\OamManager.h" />
     <ClInclude Include="source\gui\core\ListRecycler.h" />
+    <ClInclude Include="source\gui\SettingsCategoryListAdapter.h" />
+    <ClInclude Include="source\gui\SettingsCategoryListEntry.h" />
+    <ClInclude Include="source\gui\SettingsItemListAdapter.h" />
+    <ClInclude Include="source\gui\SettingsItemListEntry.h" />
+    <ClInclude Include="source\gui\SettingsScreen.h" />
     <ClInclude Include="source\gui\Toolbar.h" />
     <ClInclude Include="source\gui\core\UIElement.h" />
     <ClInclude Include="source\gui\core\UIManager.h" />
     <ClInclude Include="source\gui\core\VramManager.h" />
+    <ClInclude Include="source\gui\UIContext.h" />
     <ClInclude Include="source\gui\uiutil.h" />
+    <ClInclude Include="source\INIReader.h" />
+    <ClInclude Include="source\INIWriter.h" />
     <ClInclude Include="source\LinkedList.h" />
     <ClInclude Include="source\math.h" />
     <ClInclude Include="source\qsort.h" />
@@ -230,6 +247,7 @@
     <ClInclude Include="source\save\Save.h" />
     <ClInclude Include="source\save\SramSave.h" />
     <ClInclude Include="source\sd_access.h" />
+    <ClInclude Include="source\settings.h" />
     <ClInclude Include="source\string.h" />
     <ClInclude Include="source\vector.h" />
     <ClInclude Include="source\vram.h" />
@@ -268,6 +286,7 @@
     <None Include="source\emu\cpuArmHi.s" />
     <None Include="source\emu\cpuThumb.s" />
     <None Include="source\emu\irq.s" />
+    <None Include="source\emu\sio.s" />
     <None Include="source\emu\snd.s" />
     <None Include="source\emu\timer.s" />
     <None Include="source\sd_access_asm_itcm.s" />
