--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -38,30 +38,30 @@ steps:
 - script: |
     cd $(Build.Repository.LocalPath)
     make
-    move s.nds $(Build.Repository.LocalPath)\build\GBARunner2_arm9dldi.nds    
+    move s.nds $(Build.Repository.LocalPath)\build\GBARunner2_arm9dldi_ds.nds
     make clean
-  displayName: 'Build arm9dldi'
-
-- script: |
-    cd $(Build.Repository.LocalPath)
-    make all ENABLE_WRAM_ICACHE=1
-    move s.nds $(Build.Repository.LocalPath)\build\GBARunner2_arm9dldi_wramicache.nds
-    make clean
-  displayName: 'Build arm9dldi_wramicache'
+  displayName: 'Build arm9dldi_ds'
 
 - script: |
     cd $(Build.Repository.LocalPath)
     make all ARM7_DLDI=1
-    move s.nds $(Build.Repository.LocalPath)\build\GBARunner2_arm7dldi.nds    
+    move s.nds $(Build.Repository.LocalPath)\build\GBARunner2_arm7dldi_ds.nds    
     make clean
-  displayName: 'Build arm7dldi'
+  displayName: 'Build arm7dldi_ds'
 
 - script: |
     cd $(Build.Repository.LocalPath)
-    make all ARM7_DLDI=1 ENABLE_WRAM_ICACHE=1
-    move s.nds $(Build.Repository.LocalPath)\build\GBARunner2_arm7dldi_wramicache.nds    
+    make all ARM7_DLDI=1 USE_DSI_16MB=1
+    move s.nds $(Build.Repository.LocalPath)\build\GBARunner2_arm7dldi_dsi.nds    
     make clean
-  displayName: 'Build arm7dldi_wramicache'
+  displayName: 'Build arm7dldi_dsi'
+
+- script: |
+    cd $(Build.Repository.LocalPath)
+    make all ARM7_DLDI=1 USE_3DS_32MB=1
+    move s.nds $(Build.Repository.LocalPath)\build\GBARunner2_arm7dldi_3ds.nds    
+    make clean
+  displayName: 'Build arm7dldi_3ds'
 
 - task: PublishPipelineArtifact@1
   inputs:
