Experimental rtcom 3ds gyro support

--- a/arm9/Makefile
+++ b/arm9/Makefile
@@ -168,28 +168,31 @@ $(ARM9ELF)	:	$(OFILES)
 #---------------------------------------------------------------------------------
 	@echo $(notdir $<)
 	@$(bin2o)
-	arm-none-eabi-objcopy.exe --rename-section .rodata=.vram $(@)
 
 #---------------------------------------------------------------------------------
 %.nbfc.o	:	%.nbfc
 #---------------------------------------------------------------------------------
 	@echo $(notdir $<)
 	@$(bin2o)
-	arm-none-eabi-objcopy.exe --rename-section .rodata=.vram $(@)
 
 #---------------------------------------------------------------------------------
 %.nbfs.o	:	%.nbfs
 #---------------------------------------------------------------------------------
 	@echo $(notdir $<)
 	@$(bin2o)
-	arm-none-eabi-objcopy.exe --rename-section .rodata=.vram $(@)
 
 #---------------------------------------------------------------------------------
 %.nbfp.o	:	%.nbfp
 #---------------------------------------------------------------------------------
 	@echo $(notdir $<)
 	@$(bin2o)
-	arm-none-eabi-objcopy.exe --rename-section .rodata=.vram $(@)
+
+#---------------------------------------------------------------------------------
+%.uc11.o	:	%.uc11
+#---------------------------------------------------------------------------------
+	@echo $(notdir $<)
+	@$(bin2o)
+	arm-none-eabi-objcopy.exe --rename-section .rodata=.text $(@)
 
 -include $(DEPSDIR)/*.d
  
