--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,9 @@ bld/
 
 # Visual Studio 2015 cache/options directory
 .vs/
+# VSCode cache/options directory
+.vscode/
+.history/
 # Uncomment if you have tasks that create the project's static files in wwwroot
 #wwwroot/
 
