DSP audio support for DSi and 3DS

--- a/Makefile_isnitro
+++ b/Makefile_isnitro
@@ -13,7 +13,7 @@ export TOPDIR		:=	$(CURDIR)
 export ISNITRODEBUG := 1
 
 
-.PHONY: arm7/$(TARGET).elf arm9/$(TARGET).elf
+.PHONY: dsp/$(TARGET).cdc arm7/$(TARGET).elf arm9/$(TARGET).elf
 
 #---------------------------------------------------------------------------------
 # main targets
@@ -25,16 +25,25 @@ $(TARGET)_isnitro.nds	:	arm7/$(TARGET).elf arm9/$(TARGET).elf
 	cmd /c "runbash.bat isnitro.sh \"-c $(TARGET)_isnitro.nds -b icon.bmp GBARunner2;Gericom -7 arm7/$(TARGET).elf -9 arm9/$(TARGET).elf -d nitrofiles\""
 	dlditool FatInNitroFS.dldi $(TARGET)_isnitro.nds
 
+dsp/$(TARGET).cdc:
+	$(MAKE) -C dsp
+
 #---------------------------------------------------------------------------------
 arm7/$(TARGET).elf:
 	$(MAKE) -C arm7
 	
 #---------------------------------------------------------------------------------
-arm9/$(TARGET).elf:
+arm9/$(TARGET).elf: dsp/$(TARGET).cdc
 	$(MAKE) -C arm9
 
 #---------------------------------------------------------------------------------
 clean:
+	$(MAKE) -C dsp clean
+	$(MAKE) -C arm9 clean
+	$(MAKE) -C arm7 clean
+	rm -f $(TARGET).nds $(TARGET).arm7 $(TARGET).arm9
+
+clean_arm:
 	$(MAKE) -C arm9 clean
 	$(MAKE) -C arm7 clean
 	rm -f $(TARGET).nds $(TARGET).arm7 $(TARGET).arm9
