--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,28 +29,28 @@ steps:
 - script: |
     cd $(Build.Repository.LocalPath)
     make
-    move s.nds $(Build.Repository.LocalPath)\build\GBARunner2_arm9dldi_ds.nds
+    move GBARunner2.nds $(Build.Repository.LocalPath)\build\GBARunner2_arm9dldi_ds.nds
     make clean
   displayName: 'Build arm9dldi_ds'
 
 - script: |
     cd $(Build.Repository.LocalPath)
     make all ARM7_DLDI=1
-    move s.nds $(Build.Repository.LocalPath)\build\GBARunner2_arm7dldi_ds.nds    
+    move GBARunner2.nds $(Build.Repository.LocalPath)\build\GBARunner2_arm7dldi_ds.nds    
     make clean
   displayName: 'Build arm7dldi_ds'
 
 - script: |
     cd $(Build.Repository.LocalPath)
     make all ARM7_DLDI=1 USE_DSI_16MB=1
-    move s.nds $(Build.Repository.LocalPath)\build\GBARunner2_arm7dldi_dsi.nds    
+    move GBARunner2.nds $(Build.Repository.LocalPath)\build\GBARunner2_arm7dldi_dsi.nds    
     make clean
   displayName: 'Build arm7dldi_dsi'
 
 - script: |
     cd $(Build.Repository.LocalPath)
     make all ARM7_DLDI=1 USE_3DS_32MB=1
-    move s.nds $(Build.Repository.LocalPath)\build\GBARunner2_arm7dldi_3ds.nds    
+    move GBARunner2.nds $(Build.Repository.LocalPath)\build\GBARunner2_arm7dldi_3ds.nds    
     make clean
   displayName: 'Build arm7dldi_3ds'
 
