Use adjusted gba sync, improve dsp makefile This makes the average number of gba cycles per frame equal to a real gba, but with the ds base clock. This fixes problems with games that use timer sync for audio. Sample rates are also no longer fractions

--- a/dsp/Makefile
+++ b/dsp/Makefile
@@ -110,11 +110,12 @@ else
 
 %.o: %.c
 	@echo $(notdir $<)
-	$(CLANG) $(CFLAGS) -o $@ $<
+	$(CLANG) -MMD -MP -MF $(DEPSDIR)/$*.d $(CFLAGS) -o $@ $<
 
 %.o: %.s
 	@echo $(notdir $<)
-	$(MC) $(ASFLAGS) --filetype=obj -o $@ $<
+	$(CLANG) -x assembler-with-cpp -MMD -MP -MF $(DEPSDIR)/$*.d $(CFLAGS) -o $@ $<
+# $(MC) -MMD -MP -MF $(DEPSDIR)/$*.d $(ASFLAGS) --filetype=obj -o $@ $<
  
 #---------------------------------------------------------------------------------
 # main targets
